--- a/taco.css
+++ b/taco.css
@@ -1,12 +1,24 @@
 .topnav {
-  background-color: navy;
+  background-color: green;
   overflow: hidden;
+}
+button{
+display: block;
+margin: 10px;
+padding: 10px;
+justify-content: center;
+border-radius: 10px;
+border: 5px solid transparent;
+border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
+border-image-slice: 1; 
+margin-left: auto;
+margin-right: auto;
 }
 
 .topnav a {
   float: left;
   display: block;
-  color: lightpink;
+  color: orange;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -15,8 +27,8 @@
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #royalblue;
-  color: lightpink;
+  background-color: green;
+  color: orange;
 }
 
 /* Add an active class to highlight the current page */
