--- a/taco.css
+++ b/taco.css
@@ -48,3 +48,9 @@ margin-right: auto;
     float: right;
     display: block;
   }
+@media screen and (max-width: 480px) {
+.topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
