--- a/taco.css
+++ b/taco.css
@@ -54,3 +54,17 @@ margin-right: auto;
     float: right;
     display: block;
   }
+
+  @media screen and (max-width: 480px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
