--- a/taco.css
+++ b/taco.css
@@ -1,81 +1,123 @@
+*{
+  background-color: green;
+font-family:  Helvetica ;
+box-sizing: border-box;
+}
+
+nav a{
+color:orange;}
+@media screen and (max-width: 480px) {
+
+img{
+margin: auto;
+width: 50vw;
+border-radius: 8px;
+}
+
+
+#mytitle{
+
+width: 50%;
+float: right;
+margin: auto;
+font-size: 1.5em;
+}
+
+
+#myfooter{
+text-align: center;
+
+}
+body{
+box-sizing: border-box;}
+
+.mainsection{
+border: 1px solid beige;
+border-radius: 8px;
+padding: 1px;}
+
+
+footer{
+
+background-color:green;
+color: orange;
+width: 100%;
+margin: auto;}
+
+h1{
+color: black;}
+
+
 .topnav {
+ color:orange;
   background-color: green;
   overflow: hidden;
 }
-button{
-  color:black;
-display: block;
-margin: 10px;
-padding: 10px;
-justify-content: center;
-border-radius: 10px;
-border: 5px solid transparent;
-border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
-border-image-slice: 1; 
-margin-left: auto;
-margin-right: auto;
-}
 
-.topnav a {
-  float: left;
-  display: block;
-  color: orange;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: green;
-  color: orange;
-}
-
-/* Add an active class to highlight the current page */
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-  display: none;
-}
 
 @media screen and (max-width: 480px) {
 .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
     float: right;
     display: block;
-  }
-@media screen and (max-width: 480px) {
-.topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
+    /*color:black;*/
   }
 
-  @media screen and (max-width: 480px) {
-  .topnav.responsive {position: relative;}
+   .topnav.responsive {position: relative;}
   .topnav.responsive a.icon {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 0;/*
+    color:black;*/
   }
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
+    text-decoration: none;
+    color:orange;
   }
 
-img{
-width:50vw;
-margin: auto;
-border-radius: 8px; 
+
+.topnav a.active {
+  background-color:green;
+  color: orange;
 }
-header{
-width: 100%;
-display: grid;}
 
 
+.topnav a:hover {
+  background-color: green;
+
+}
+
+
+li:hover{
+-webkit-transform: scale(1.08);
+  transform: scale(1.12);
+
+
+}
+
+#myheader{
+   display: grid;
+grid-template-columns: 50% 50%;
+column-gap: 2px;
+margin: 15px;
+margin-bottom: 0px;
+}
+
+
+h2{
+text-align: center;
+margin: auto;
+font-size: 1.5em
+}
+
+
+#myfooter{
+display: grid;
+grid-template-columns: 100%;
+margin: 20px;}
+
+hr{
+margin: 0px;}
